# deposito__Montresori

./: .gitignore  README.md
giornata_11_09/: mattina_1109.py  pomeriggio_1_1109.py  pomeriggio_2_1109.py  pomeriggio_3_1109.py
giornata_12_09/: mattina_1209.ipynb  pomeriggio_1_1209.ipynb  pomeriggio_2_1209.ipynb
giornata_15_09/: mattina_1509.py
giornata_15_09/app_base_llm/: streamlit_app.py
giornata_16_09/: RAG_chain.py  embedding_test.py  kpop.txt  trasformers.txt
giornata_17_09/: main.py  pytest.ini
giornata_17_09/.github/workflows/: ci.yml
giornata_17_09/docs/source/: conf.py  index.rst
giornata_17_09/tests/: test_calcoli.py
giornata_17_09/utils/: calcoli.py
giornata_18_09/: test_llm.py
giornata_22_09/crew_research/: README.md  pyproject.toml  report.md
giornata_22_09/crew_research/src/crew_research/: crew.py  main.py
