[project]
name = "crew_research"
version = "0.1.0"
description = "crew_research using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.193.2,<1.0.0"
]

[project.scripts]
crew_research = "crew_research.main:run"
run_crew = "crew_research.main:run"
train = "crew_research.main:train"
replay = "crew_research.main:replay"
test = "crew_research.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
